--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <%= render "shared/header" %>
+      <%= render "admin/shared/header" %>
       <div id="container">
         <%= yield %>
       </div>
