--- a/app/assets/stylesheets/admin/_colors.scss
+++ b/app/assets/stylesheets/admin/_colors.scss
@@ -5,3 +5,6 @@ $very_light_magenta: #ffddff;
 
 $dark_yellow: #aaaa00;
 $very_dark_yellow: darken($dark_yellow, 25%);
+
+$red: #cc0000;
+$green: #00cc00;
