--- a/app/assets/stylesheets/admin/_colors.scss
+++ b/app/assets/stylesheets/admin/_colors.scss
@@ -1,4 +1,8 @@
+$dark_gray: #666666;
+$very_light_gray: #fafafa;
+$light_gray: #eeeeee;
 $dark_magenta: #aa00aa;
+$very_dark_magenta: darken($dark_magenta, 25%);
 $magenta: #ff00ff;
 $light_magenta: #ff99ff;
 $very_light_magenta: #ffddff;
