--- a/app/assets/stylesheets/admin/layout.scss
+++ b/app/assets/stylesheets/admin/layout.scss
@@ -18,9 +18,11 @@ div#wrapper {
 
 header {
   padding: $moderate;
-  background-color: $dark_yellow;
-  color: $very_light_magenta;
-  span.logo-mark {
+  background-color: $dark_magenta;
+  color: $very_light_gray;
+  a.logo-mark {
+    float: none;
+    text-decoration: none;
     font-weight: bold;
   }
   a {
