--- a/app/views/admin/staff_members/_form.html.erb
+++ b/app/views/admin/staff_members/_form.html.erb
@@ -27,7 +27,7 @@
 </div>
 <div>
   <%= f.label :end_date, "退職日" %>
-  <%= f.date_field :start_date, required: true %>
+  <%= f.date_field :end_date, required: true %>
 </div>
 <div>
   <%= f.check_box :suspended %>
