--- a/app/views/staff/accounts/show.html.erb
+++ b/app/views/staff/accounts/show.html.erb
@@ -2,7 +2,8 @@
 <h1><%= @title %></h1>
 <div class="table-wrapper">
   <div class="links">
-    <%= link_to "アカウント情報編集", :edit_staff_account %>
+    <%= link_to "アカウント情報編集", :edit_staff_account %> |
+    <%= link_to "パスワード変更", :edit_staff_password %>
   </div>
 
   <table class="attributes">
@@ -25,6 +26,10 @@
       <td class="email">
         <%= @staff_member.email %>
       </td>
+    </tr>
+    <tr>
+      <th>パスワード</th>
+      <td class="password">**********</td>
     </tr>
     <tr>
      <th>入社日</th>
