--- a/app/views/admin/staff_members/index.html.erb
+++ b/app/views/admin/staff_members/index.html.erb
@@ -17,7 +17,22 @@
       <th>停止フラグ</th>
       <th>アクション</th>
     </tr>
-    <%= render partial: "member", collection: @staff_members %>
+    <% @staff_members.each do |member| %>
+      <% p = StaffMemberPresenter.new(member, self) %>
+      <tr>
+        <td><%= member.family_name %> <%= member.given_name %></td>
+        <td><%= member.family_name_kana %> <%= member.given_name_kana %></td>
+        <td class="email"><%= member.email %></td>
+        <td class="date"><%= member.start_date.strftime("%Y/%m/%d") %></td>
+        <td class="date"><%= member.end_date.try(:strftime, "%Y/%m/%d") %></td>
+        <td class="boolean"><%= p.suspended_mark %></td>
+        <td class="actions">
+          <%= link_to "編集", [ :edit, :admin, member ] %> |
+          <%= link_to "Events", [ :admin, member, :staff_events ] %> |
+          <%= link_to "削除", [ :admin, member ], method: :delete, data: { confirm: "本当に削除しますか？" } %>
+        </td>
+      </tr>
+    <% end %>
   </table>
   <%= paginate @staff_members %>
 
